added the look of the quote rating

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,65 @@
 <div>
   <button class="btn-floating teal add-button"><i class="material-icons">add</i></button>
   <div class="row">
-<div class="input-field col s4">
-  <input type="text">
-</div>
+    <div class="input-field col s4">
+      <input type="text">
+    </div>
     <div class="input-field col s6">
       <input type="text">
     </div>
     <div class="input-field col s2">
-      <button>Add</button>
+      <button class="btn">Add</button>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col s8">
+      <div>
+        <div>
+          <div class="card teal accent-5 hoverable">
+            <div class="card-content white-text">
+              <span class="card-title">
+                Jeśli nie chcesz mojej zguby, krrrokodyla daj mi luby.
+              </span>
+              Aleksander Fredro
+            </div>
+            <div>
+              <span class="badge grey darken-2 left white-text">7</span>
+              <button class="btn blue mr-5">
+                <i class="material-icons">exposure_plus_1</i>
+              </button>
+              <button class="btn brown">
+                <i class="material-icons">exposure_neg_1</i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col s4">
+      <div class="col s12">
+        <h5>Best:</h5>
+        <div class="collection">
+          <p class="collection-items">
+            <span class="blue lighten-4 badge">7</span>
+            Jeśli nie chcesz mojej zguby, krrrokodyla daj mi luby. <br/>
+            <span class="blue-text">Aleksander Fredro</span>
+          </p>
+        </div>
+      </div>
+
+        <div class="col s12">
+          <h5>Worst:</h5>
+          <div class="collection">
+            <p>
+              <span>Jeśli nie chcesz mojej zguby, krrrokodyla daj mi luby.</span>
+              <span>Aleksander Fredro</span>
+            </p>
+          </div>
+        </div>
+
     </div>
   </div>
 </div>
