--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
-<nav>
-  <div class="nav-wrapper teal darken-3">
-    <span class="brand-logo center"> My Best Quotes</span>
-  </div>
-</nav>
-
-
+<app-navbar logo="My Best Quotes"></app-navbar>
 <div class="container q-container">
-
   <button class="btn-floating teal add-button">
     <i class="material-icons" (click)="show()">add</i>
   </button>
@@ -24,7 +17,6 @@
 
 
   <div class="row">
-
     <div class="col s8">
       <div class="row">
         <div class="col s12">
@@ -47,39 +39,13 @@
               </button>
             </div>
           </div>
-
         </div>
       </div>
     </div>
 
     <div class="col s4">
-      <div class="col s12">
-        <h5>Best</h5>
-        <div class="collection">
-          <ng-container *ngFor="let quotation of quotes">
-            <p class="collection-item" *ngIf="quotation.votes>0">
-              <span class="blue lighten-4 badge">{{quotation.votes}}</span>
-              {{quotation.sentence}}<br/>
-              <span class="blue-text">{{quotation.author}}</span>
-            </p>
-          </ng-container>
-        </div>
-      </div>
-      <div class="col s12">
-        <h5>Worst</h5>
-
-        <div class="collection">
-          <ng-container *ngFor="let quotation of quotes">
-            <p class="collection-item" *ngIf="quotation.votes<0">
-            <span class="blue lighten-4 badge">{{quotation.votes}}</span>
-            {{quotation.sentence}}<br/>
-            <span class="blue-text">{{quotation.author}}</span>
-          </p>
-          </ng-container>
-
-        </div>
-      </div>
+      <app-ranking [quotes]="bestQuotes()" title="Best"></app-ranking>
+      <app-ranking [quotes]="worstQuotes()" title="Worst"></app-ranking>
     </div>
-
   </div>
 </div>
