--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,9 @@
 <app-navbar logo="My Best Quotes"></app-navbar>
 <div class="container q-container">
   <button class="btn-floating teal add-button">
-    <i class="material-icons" (click)="show()">add</i>
+    <i class="material-icons" (click)="form.show()">add</i>
   </button>
-  <div class="row edit-row" [class.drawer]="showForm">
-    <div class="input-field col s4">
-      <input type="text" placeholder="Author" [(ngModel)]="quotation.author"/>
-    </div>
-    <div class="input-field col s6">
-      <input type="text" placeholder="Quote" [(ngModel)]="quotation.sentence"/>
-    </div>
-    <div class="input-field col s2">
-      <button class="btn small" (click)="onAddQuote()">Add</button>
-    </div>
-  </div>
-
+  <app-form (quotese)="onAddQuotation($event)" #form></app-form>
 
   <div class="row">
     <div class="col s8">
